# data_engineering

./: .gitignore  LICENSE  README.md  pyproject.toml
project_1/: README.md  read_data.py
project_2/: README.md  analysis.py
project_2/data/: pull_data.py
project_3/: README.md  analysis.py
project_3/data/: pull_data.py
project_4/: README.md
src/data_engineering/: __init__.py  example.py
tests/: test_example.py
