[project]
name = "data-engineering"
version = "0.1.0"
description = "Shared code, experiments, and data pipelines."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "pandas",
]

[dependency-groups]
dev = [
    "kaggle>=2.2.1",
    "pytest>=8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_engineering"]
